app/styles/_nypr-account-modal.scss
.nypr-account-container {
  padding: 0;
  border-radius: 3px;
  overflow: hidden;
  max-width: 457px;
}

.nypr-account-overlay.ember-modal-overlay {
  z-index: $zIndex--modal;
  background-color: rgba(0,0,0,0.8);
  height: 100%;
}

.nypr-account-modal-title {
  background-color: $nearwhite;
  padding: 18px 27px;
  margin-bottom: 25px;
  @include fontsize(24);

  @include flexbox((
    display: flex,
    justify-content: space-between,
    align-items: center
  ));
}

.nypr-account-modal-body {
  padding: 27px;
  line-height: 1.6;
}

.nypr-account-modal-title + .nypr-account-modal-body {
  padding-top: 0;
}

.nypr-account-modal-footer {
  width: 100%;
  text-align: center;
  margin-bottom: 27px;
  @include flexbox((
    display: flex,
    justify-content: space-around
  ));

  @include mq("(min-width: 421px)") {
    padding: 0 50px;
  }
}

.nypr-account-modal-close {
  @include blank-button;
  width: 15px;
  height: 15px;
}

